# musicbrainz-database-setup

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: PREREQUISITES.md  README.md
docs/assets/: musicbrainz-database-setup.cast
docs/features/: 2026-04-22-initial-implementation.md  2026-04-24-faster-import.md  2026-04-24-print-traceback-on-verbose-error.md  2026-04-25-progress-ui-phases.md  2026-04-26-uvx-invocation.md  2026-04-30-manual-tuning-statements.md
docs/plans/: 2026-04-22-initial-implementation.md  2026-04-24-faster-import.md  2026-04-24-print-traceback-on-verbose-error.md  2026-04-25-progress-ui-phases.md  2026-04-26-uvx-invocation.md  2026-04-30-manual-tuning-statements.md
docs/sessions/: 2026-04-22-initial-implementation-implementation-session.md  2026-04-22-initial-implementation-planning-session.md  2026-04-24-faster-import-implementation-session.md  2026-04-24-faster-import-planning-session.md  2026-04-24-print-traceback-on-verbose-error-implementation-session.md  2026-04-24-print-traceback-on-verbose-error-planning-session.md  2026-04-25-progress-ui-phases-implementation-session.md  2026-04-25-progress-ui-phases-planning-session.md  2026-04-26-uvx-invocation-implementation-session.md  2026-04-26-uvx-invocation-planning-session.md  2026-04-30-manual-tuning-statements-implementation-session.md  2026-04-30-manual-tuning-statements-planning-session.md
src/musicbrainz_database_setup/: __init__.py  __main__.py  cli.py  config.py  db.py  errors.py  logging.py  progress.py  (+1 more)
(+45 files in other folders)
