[project]
name = "musicbrainz-database-setup"
version = "0.1.0"
description = "Download MusicBrainz database dumps and import them into a PostgreSQL instance."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rafael Cordones" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "questionary>=2.0",
]

[project.optional-dependencies]
gpg = ["python-gnupg>=0.5"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
musicbrainz-database-setup = "musicbrainz_database_setup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicbrainz_database_setup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
